--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  email: mutuakiragu@gmail.com
+  username: kigsmtua
+  encrypted_password: <%= User.new.send(:password_digest, '123greetings') %>
+
+two:
+  email: mutuakiragu1@gmail.com
+  username: kigsmtua1
+  encrypted_password: <%= User.new.send(:password_digest, '123greetings') %>
